# LIO

./: .gitignore  CMakeLists.txt  LIO (3).html  LIO.sln  LIO.vcxproj  LIO.vcxproj.filters  README.md  README_BUILD.md  annotations.csv  lio_annotations.csv  lio_summary.csv  packages.config  vcpkg.json
assets/: LIO.html
data/: example_tracking.csv
resources/: lio.rc
src/: CsvIO.cpp  CsvIO.h  LIO.rc  LioCore.cpp  LioCore.h  LioVideoApp.cpp  LioVideoApp.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  lio_icon.rc  lio_resource.rc.in  main.cpp  resource.h  resource.rc
